Añadimos a Thanos y su fondo

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
                 <input type="button" value="Leer Más">
             </div>
         </div>
+        <div class="card">
+            <div class="cover">
+                <img src="images/p5.png" alt="">
+                <div class="img__back"></div>
+            </div>
+            <div class="description">
+                <h2>Thanos</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, laboriosam.</p>
+                <input type="button" value="Leer Más">
+            </div>
+        </div>
+
 
     </div>
 
